@@ -11,7 +11,6 @@ other stuff
 - check value != defaultValue in required, making defaultValue invalid
 - test and document Scott's rules modules
 - bug in marketo demo, keeps showing error for "email already taken", even if server returns true
-- bug in testsuite in IE6, normal form submit kills it
 - completely rework showErrors: manually settings errors is currently extremely flawed and utterly useless, eg. errors disappear if some other validation is triggered
 - add custom event to remote validation for adding more parameters
 - submitting a form where only remote validation is left to run sometimes calls submitHandler/submit after the field got fixed
